traefik/ing-internal-phpmyadmin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/redirect-entry-point: http
  labels:
    zone: internal
  name: ing-internal-httpd
  namespace: test-customer
spec:
  rules:
  - host: kworker1-test.ms.nx
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 81
        path: /
  - host: kworker2-test.ms.nx
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 81
        path: /
status:
  loadBalancer: {}
